--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "method-override": "2.3.5",
     "methods": "1.1.2",
     "mongoose": "4.4.10",
+    "mongoose-pagination": "^1.0.0",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
     "passport": "0.3.2",
