--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "express-jwt": "3.3.0",
     "express-session": "^1.15.6",
     "jsonwebtoken": "7.1.9",
+    "jwt-simple": "^0.5.3",
     "method-override": "2.3.5",
     "methods": "1.1.2",
     "mongoose": "4.4.10",
