añadir social-singin google con passport

--- a/backend/package.json
+++ b/backend/package.json
@@ -34,8 +34,13 @@
     "mongoose-pagination": "^1.0.0",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
-    "passport": "0.3.2",
-    "passport-local": "1.0.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth2": "^0.1.6",
+    "passport-google-plus": "^0.5.1",
+    "passport-google-plus-token": "^2.1.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "request": "^2.88.0",
     "slug": "0.9.1",
     "underscore": "1.8.3"
