--- a/backend/package.json
+++ b/backend/package.json
@@ -36,9 +36,12 @@
     "morgan": "^1.9.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-github2": "^0.1.11",
     "passport-google-oauth2": "^0.1.6",
     "passport-google-plus": "^0.5.1",
     "passport-google-plus-token": "^2.1.0",
+    "passport-instagram": "^1.0.0",
+    "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "request": "^2.88.0",
