--- a/frontend_NodeJS_ExpressJS_AngularJS15_ES6/package.json
+++ b/frontend_NodeJS_ExpressJS_AngularJS15_ES6/package.json
@@ -15,6 +15,7 @@
     "angular-material": "^1.1.10",
     "angular-toastr": "^2.1.1",
     "angular-ui-bootstrap": "^2.5.6",
+    "angular-ui-carousel": "^0.1.10",
     "angular-ui-router": "^0.4.2",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
