--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,14 @@
     "@sendgrid/mail": "^6.3.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "connect-multiparty": "^2.2.0",
     "cors": "2.7.1",
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
     "express": "^4.16.3",
     "express-jwt": "3.3.0",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "7.1.9",
     "jwt-simple": "^0.5.3",
     "method-override": "2.3.5",
