--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "merge-stream": "^1.0.0",
     "ngmap": "^1.18.4",
+    "sweetalert2": "^7.28.5",
     "vinyl-source-stream": "^1.1.0"
   }
 }
