--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "angular-animate": "^1.7.4",
     "angular-aria": "^1.7.4",
     "angular-base64": "^2.0.5",
+    "angular-chat": "^1.0.9",
     "angular-material": "^1.1.10",
     "angular-toastr": "^2.1.1",
     "angular-ui-bootstrap": "^2.5.6",
@@ -32,7 +33,9 @@
     "marked": "^0.3.5",
     "materialize-css": "^1.0.0-rc.2",
     "merge-stream": "^1.0.0",
+    "ngdropzone": "^2.0.2",
     "ngmap": "^1.18.4",
+    "rltm": "^1.3.1",
     "sweetalert2": "^7.28.5",
     "vinyl-source-stream": "^1.1.0"
   }
