--- a/backend/package.json
+++ b/backend/package.json
@@ -70,6 +70,7 @@
     "passport-twitter": "^1.0.4",
     "request": "^2.88.0",
     "slug": "0.9.1",
+    "stripe": "^6.12.1",
     "underscore": "1.8.3",
     "vinyl-source-stream": "^2.0.0"
   },
