--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
     "mongoose-pagination": "^1.0.0",
     "mongoose-unique-validator": "1.0.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-github2": "^0.1.11",
