--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "marked": "^0.3.5",
     "materialize-css": "^1.0.0-rc.2",
     "merge-stream": "^1.0.0",
+    "ng-file-upload": "^12.2.13",
     "ngdropzone": "^2.0.2",
     "ngmap": "^1.18.4",
     "rltm": "^1.3.1",
