--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "ngmap": "^1.18.4",
     "rltm": "^1.3.1",
     "sweetalert2": "^7.28.5",
+    "ui-carousel": "^0.2.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
