--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-carousel": "^0.1.10",
     "angular-ui-router": "^0.4.2",
+    "apollo-server-express": "^1.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^10.0.0",
     "bcrypt-nodejs": "0.0.3",
@@ -40,10 +41,12 @@
     "cors": "2.7.1",
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "express-jwt": "3.3.0",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.2",
     "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^2.2.1",
     "gulp-notify": "^3.2.0",
