--- a/backend/package.json
+++ b/backend/package.json
@@ -54,6 +54,7 @@
     "gulp-uglify": "^3.0.1",
     "jsonwebtoken": "7.1.9",
     "jwt-simple": "^0.5.5",
+    "lodash": "^4.17.11",
     "merge-stream": "^1.0.1",
     "method-override": "2.3.5",
     "methods": "1.1.2",
